# rust-nn

./: Cargo.toml  Makefile  test.py
src/: image_nn.rs  main.rs  matrix.rs  network.rs  run_logics.rs
src/nn/: matrix.rs  network.rs
